--- a/vintiTri/src/index.html
+++ b/vintiTri/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <link rel="icon" type="image/x-icon" href="logo.png">
 <html lang="en">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
   <title>Vinti Tri | Online Shop</title>
   <base href="/">
